# Genius_Labbook

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
labbook/: archive.py  audit.py  cli.py  config.py  entry.py  formatting.py  git_ops.py  pathway.py  report.py  reproduce.py  scan.py  search.py  stats.py  store.py  todo.py  weekly.py
templates/: decision.md  design.md  devlog.md  experiment.md
